--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -24,6 +28,8 @@ a:hover {
 
 body {
   margin: 0;
+  overflow: hidden;
+  background: #000;
   display: flex;
   place-items: center;
   min-width: 320px;
